--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/ujs": "^7.1.3-2",
+    "apexcharts": "3.36.2",
+    "bootstrap": "5.3.0-alpha1",
     "esbuild": "^0.20.1",
     "jquery": "^3.7.1",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "simplebar": "^6.2.5"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
