--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@rails/ujs": "^7.1.3-2",
     "apexcharts": "3.36.2",
     "bootstrap": "5.3.0-alpha1",
