--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@nathanvda/cocoon": "^1.2.14",
     "@rails/ujs": "^7.1.3-2",
     "apexcharts": "3.36.2",
     "bootstrap": "5.3.0-alpha1",
